# Wproject

./: remote to local.txt
project/: delete.bat  testgit.txt
project/OneNote/: 学习.onepkg  我的笔记本.onepkg  项目.onepkg
project/hello/: hello.c  hello.cpp
project/integration/chat_room/: client.cpp
project/test_class/: Solution38.cpp  Solution38.h  test_class.cpp
project/test_cmake/: CMakeLists.txt  test.cpp
project/test_makefile/: bye.cpp  bye.h  hello.cpp  hello.h  test.cpp
project/vscode_cmake_cpp/: CMakeLists.txt  main.cpp
project/vscode_cmake_cpp/include/: add.h  hello.h
project/vscode_cmake_cpp/src/: CMakeLists.txt  add.cpp  hello.cpp
